@@ -9,6 +9,18 @@ then
   exit 1
 fi
 
+function jdk_switcher {
+  DIR=$1
+  if [ ! -d "$DIR" ]; then
+    echo "Not found: $DIR"
+    exit 1
+  fi
+  export JAVA_HOME="$DIR"
+  export JDK_HOME="${JAVA_HOME}"
+  export JAVAC="${JAVA_HOME}/bin/javac"
+  export PATH="${JAVA_HOME}/bin:${PATH}"
+}
+
 # Switch to desired JDK, download if required:
 function install_jdk {
   JDK_URL=$1
@@ -27,30 +39,30 @@ function install_jdk {
 
   if [ -z "${2+false}" ]
   then
-    export JAVA_HOME="/tmp/jdk/$JDK"
-    export JDK_HOME="${JAVA_HOME}"
-    export JAVAC="${JAVA_HOME}/bin/javac"
-    export PATH="${JAVA_HOME}/bin:${PATH}"
+    jdk_switcher "/tmp/jdk/$JDK"
   fi
 }
 
-source $HOME/.jdk_switcher_rc
 case "$JDK" in
 5)
-  jdk_switcher use oraclejdk8
   install_jdk $JDK5_URL false
   ;;
 6)
-  jdk_switcher use openjdk6
   ;;
-7|8)
-  jdk_switcher use oraclejdk${JDK}
+7)
+  jdk_switcher /usr/lib/jvm/java-7-openjdk-amd64
+  ;;
+8)
+  jdk_switcher /usr/lib/jvm/java-8-oracle
   ;;
 8-ea)
   install_jdk $JDK8_EA_URL
   ;;
 9)
   install_jdk $JDK9_URL
+  ;;
+10-ea)
+  install_jdk $JDK10_EA_URL
   ;;
 esac
 
@@ -73,7 +85,7 @@ case "$JDK" in
   fi
   ;;
 6)
-  mvn -V -B -e verify -Dbytecode.version=1.6
+  mvn -V -B -e verify -Djdk.version=1.6 -Dbytecode.version=1.6 --toolchains=./.travis/travis-toolchains.xml
   ;;
 7)
   mvn -V -B -e verify -Dbytecode.version=1.7
@@ -83,10 +95,11 @@ case "$JDK" in
   ;;
 9)
   export MAVEN_OPTS="-Djavax.net.ssl.trustStore=/etc/ssl/certs/java/cacerts"
-  # see https://bugs.openjdk.java.net/browse/JDK-8131041 about "java.locale.providers"
   mvn -V -B -e verify -Dbytecode.version=1.9 \
-    -Dinvoker.mavenOpts="-Djavax.net.ssl.trustStore=/etc/ssl/certs/java/cacerts" \
-    -DargLine=-Djava.locale.providers=JRE,SPI
+    -Dinvoker.mavenOpts="-Djavax.net.ssl.trustStore=/etc/ssl/certs/java/cacerts"
+  ;;
+10-ea)
+  mvn -V -B -e verify -Dbytecode.version=1.9
   ;;
 *)
   echo "Incorrect JDK [$JDK]"
